# hackathon26-alpha

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/agents/: graph.py  llm.py  preclean.py  state.py  state_utils.py  validate_deterministic.py
backend/app/agents/nodes/: compressor.py  fallback.py  parser.py  planner.py  sanitizer.py  summarizer.py  validator.py
backend/app/agents/prompts/: compressor_v1.txt  loader.py  planner_v1.txt  sanitizer_v1.txt  summarizer_v1.txt  validator_v1.txt
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  summary.py  team.py  updates.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  connect.py  session.py
backend/app/db/models/: __init__.py  member.py  summary.py  update.py
backend/app/db/seeds/: seed_members.py
backend/app/schemas/: member.py  plan.py  sanitized.py  summary.py  update.py  validation.py
backend/app/services/: summary_service.py  team_service.py  team_updates.py  update_quality.py  update_service.py
backend/evals/: golden_inputs.json  run_evals.py
backend/tests/: conftest.py  test_endpoints.py  test_graph_routing.py  test_graph_stubs.py  test_parser_node.py  test_prompt_loader.py  test_render_markdown.py  test_team_updates.py  test_update_quality.py  test_validate_deterministic.py
docs/: API_CONTRACT.md  API_TESTING.md  DATABASE.md  (+12 more)
(+18 files in other folders)
