[project]
name = "standup-bot-backend"
version = "0.1.0"
description = "AI Standup Bot — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30.0,<0.31",
    "alembic>=1.14.0,<1.15",
    "pydantic>=2.10.6,<2.11",
    "pydantic-settings>=2.7.0,<2.8",
    "langchain>=0.3.14,<0.4",
    "langchain-core>=0.3.28,<0.4",
    "langchain-openai>=0.3.0,<0.4",
    "langgraph>=0.2.60,<0.3",
    "structlog>=24.4.0,<25",
    "python-dotenv>=1.0.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "httpx>=0.28.0,<0.29",
    "aiosqlite>=0.20.0,<0.21",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
"app" = ["**/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
